Fix grid and add shift key snapping

--- a/modules/bezierTangents/css/bezierTangents.css
+++ b/modules/bezierTangents/css/bezierTangents.css
@@ -31,7 +31,7 @@
 
 /* Control handles */
 .bezier-handle {
-    fill: #0043ce;
+    fill: #78a9ff;
     /* stroke: #000000; */
     /* stroke-width: 0.01; */
     /* Also in viewBox units */
@@ -68,12 +68,12 @@
 }
 
 .bezier-grid-major {
-    stroke: rgba(255, 255, 255, 0.5);
+    stroke: rgba(255, 255, 255, 0.15);
     stroke-width: 0.005;
 }
 
 .bezier-axis {
-    stroke: rgba(255, 255, 255, 0.5);
+    stroke: rgba(255, 255, 255, 0.2);
     stroke-width: 0.008;
 }
 
